<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.flickerfindr.FlickrViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SearchFragment">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/search_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/filter_chip_group"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:hint="@string/search_bar_hint"

                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/search_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:backgroundTint="@color/design_default_color_secondary"
                android:layout_weight="2"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/search_button_text" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/filter_chip_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/search_line">

            <com.google.android.material.chip.Chip
                android:id="@+id/newest_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@{viewModel.searchNewest}"
                android:text="@string/newest_chip_test" />

            <com.google.android.material.chip.Chip
                android:id="@+id/oldest_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@{!viewModel.searchNewest}"
                android:text="@string/oldest_chip_text" />

            <com.google.android.material.chip.Chip
                android:id="@+id/local_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@{viewModel.searchLocal}"
                android:text="@string/local_chip_text" />

            <com.google.android.material.chip.Chip
                android:id="@+id/global_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@{!viewModel.searchLocal}"
                android:text="@string/global_chip_text" />
        </com.google.android.material.chip.ChipGroup>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/photos_grid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:padding="6dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filter_chip_group"
            app:photoData="@{viewModel.displayPhotos}"
            app:spanCount="1"
            tools:itemCount="25"
            tools:listitem="@layout/grid_view_item" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/pageButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent">


            <Button
                android:id="@+id/prev_page"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/design_default_color_secondary"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/previous"
                android:visibility="invisible" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="10">

            </Space>

            <Button
                android:id="@+id/next_page"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/design_default_color_secondary"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/next" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <ImageView
            android:id="@+id/status_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:flickrApiStatus="@{viewModel.status}"
            android:visibility="gone"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/filter_chip_group" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>